# continuous_optimization

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/solver/: common.h  variable_interaction_graph.h
include/solver/problem/: bounded_problem_interface.h  problem_interface.h
include/solver/solver/: solver_interface.h
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  benchmark_experiments_lsgo_bbo_lsgss.cpp
tests/benchmarks/experiment_01/: CMakeLists.txt  benchmark_experiments_lsgo_bbo_lsgss.cpp  benchmark_experiments_lsgo_bbo_traditional_methods.cpp
tests/benchmarks/experiment_01/initialsolutioncec2020/: solution_x0_f10_1.txt  solution_x0_f10_15.txt  solution_x0_f10_2.txt  solution_x0_f10_21.txt  solution_x0_f10_22.txt  solution_x0_f10_25.txt  solution_x0_f10_26.txt  solution_x0_f10_27.txt  solution_x0_f10_29.txt  solution_x0_f10_5.txt  solution_x0_f10_6.txt  solution_x0_f10_7.txt  solution_x0_f11_11.txt  solution_x0_f11_14.txt  solution_x0_f11_21.txt  solution_x0_f11_25.txt  solution_x0_f11_27.txt  solution_x0_f11_29.txt  solution_x0_f11_8.txt  solution_x0_f12_1.txt  solution_x0_f12_10.txt  solution_x0_f12_12.txt  solution_x0_f12_14.txt  solution_x0_f12_2.txt  solution_x0_f12_21.txt  solution_x0_f12_27.txt  solution_x0_f12_28.txt  solution_x0_f12_29.txt  solution_x0_f12_8.txt  solution_x0_f12_9.txt  solution_x0_f13_1.txt  solution_x0_f13_12_old.txt  solution_x0_f13_13.txt  solution_x0_f13_14_old.txt  solution_x0_f13_15.txt  solution_x0_f13_16_old.txt  solution_x0_f13_17_old.txt  solution_x0_f13_18.txt  solution_x0_f13_1_old.txt  solution_x0_f13_21_old.txt  (+144 more)
tests/benchmarks/experiment_02/: CMakeLists.txt  benchmark_experiments_bbo_gradient_descent.cpp  benchmark_experiments_bbo_lsgss.cpp  benchmark_experiments_bbo_powell.cpp  benchmark_experiments_gbo_lsgss.cpp
tests/benchmarks/experiment_02/initialsolutions/: solution_x0_f10_10.txt  solution_x0_f10_20.txt  solution_x0_f10_23.txt  solution_x0_f10_28.txt  solution_x0_f10_4.txt  solution_x0_f10_8.txt  solution_x0_f10_9.txt  solution_x0_f11_1.txt  solution_x0_f11_13.txt  solution_x0_f11_15.txt  solution_x0_f11_16.txt  solution_x0_f11_19.txt  solution_x0_f11_2.txt  solution_x0_f11_24.txt  solution_x0_f11_26.txt  solution_x0_f11_30.txt  solution_x0_f11_4.txt  solution_x0_f11_7.txt  solution_x0_f11_9.txt  solution_x0_f12_11.txt  solution_x0_f12_15.txt  solution_x0_f12_18.txt  solution_x0_f12_23.txt  solution_x0_f12_25.txt  solution_x0_f12_3.txt  solution_x0_f12_30.txt  solution_x0_f12_4.txt  solution_x0_f12_5.txt  solution_x0_f12_7.txt  solution_x0_f13_10_old.txt  solution_x0_f13_11.txt  solution_x0_f13_11_old.txt  solution_x0_f13_13_old.txt  solution_x0_f13_14.txt  solution_x0_f13_18_old.txt  solution_x0_f13_19_old.txt  solution_x0_f13_20.txt  solution_x0_f13_23.txt  solution_x0_f13_23_old.txt  solution_x0_f13_24.txt  (+130 more)
tests/benchmarks/initialsolutioncec2020/: solution_x0_f10_11.txt  solution_x0_f10_12.txt  solution_x0_f10_13.txt  solution_x0_f10_14.txt  solution_x0_f10_16.txt  solution_x0_f10_17.txt  solution_x0_f10_18.txt  solution_x0_f10_19.txt  solution_x0_f10_24.txt  (+147 more)
tests/examples/: CMakeLists.txt  sphere_I.cpp  sphere_II.cpp  sphere_III.cpp
(+48 files in other folders)
